# dfx-extensions

./: .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compatibility.json  dist-workspace.toml  registry.json  sns.mmd
.github/workflows/: build-extension-manually.sh  e2e.yml  install-extension-manually.sh  linter.yml  prepare-release.yml  release-with-github.yml  release.yml  update-dependencies.sh
e2e/: e2e_utils.sh  get_ephemeral_port.py  get_package_e2e_path.sh  launch-simple-sns.sh  utils.sh
extensions-utils/: Cargo.toml
extensions-utils/src/: dfx.rs  download_dependencies.rs  download_wasm.rs  lib.rs  logger.rs  manifest.rs
extensions-utils/src/dependencies/: call.rs  dfx.rs  download_ic_binaries.rs  mod.rs
extensions-utils/src/dependencies/download_wasms/: mod.rs  nns.rs  sns.rs
extensions-utils/src/download_wasms/: mod.rs  nns.rs
extensions-utils/src/error/: dfx_executable.rs  mod.rs
extensions-utils/src/project/: error.rs  import.rs  mod.rs  network_mappings.rs
extensions/nns/: CHANGELOG.md  Cargo.toml  build.rs  dependencies.json  extension.json  extension.toml  prepare-release.toml
extensions/nns/e2e/assets/subnet_type/shared_network_settings/application/: networks.json
extensions/nns/e2e/tests/: nns.bash
extensions/nns/e2e/tests-dfx/: nns.bash
extensions/nns/scripts/: nns-canister.Dockerfile
extensions/nns/src/: errors.rs  extension.toml  install_nns.rs  main.rs
extensions/nns/src/commands/: import.rs  install.rs  mod.rs
extensions/nns/src/nns_types/: account_identifier.rs  icpts.rs
extensions/orbit/: Cargo.toml  README.md
extensions/sns/: CHANGELOG.md  Cargo.toml  README.md  build.rs  dependencies.json  extension.json  extension.toml  prepare-release.toml
extensions/sns/e2e/assets/sns/valid/: sns_init.yaml  sns_v2.yml
extensions/sns/e2e/tests/: sns.bash
extensions/sns/e2e/tests-dfx/: sns.bash
extensions/sns/src/: create_config.rs  deploy.rs  download_wasms.rs  extension.toml  main.rs  utils.rs  validate_config.rs
extensions/sns/src/commands/: deploy.rs  download.rs  import.rs  mod.rs  propose.rs
extensions/sns/src/commands/config/: create.rs  mod.rs  validate.rs
extensions/sns/src/commands/prepare_canisters/: add_nns_root.rs  mod.rs  remove_nns_root.rs
sns/: Cargo.toml
sns/src/: main.rs
sns/src/commands/: deploy.rs  download.rs  import.rs  mod.rs
sns/src/commands/config/: create.rs  mod.rs  validate.rs
sns/src/lib/: call_bundled.rs  create_config.rs  deploy.rs  download.rs  mod.rs  project.rs  validate_config.rs
