[workspace]
members = ["extensions/sns", "extensions/nns", "extensions-utils"]
resolver = "2"

[workspace.package]
authors = ["DFINITY Team"]
publish = false
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dfinity/dfx-extensions"

[workspace.dependencies]
dfx-core = "0.1.2"
dfx-extensions-utils.path = "./extensions-utils"

anyhow = "^1"
candid = "0.10"
clap = { version = "4.2.1", features = ["derive", "env"] }
flate2 = { version = "1.0.25", default-features = false, features = [
    "zlib-ng",
] }
fn-error-context = "0.2.1"
futures-util = "0.3.28"
ic-agent = "0.39"
ic-utils = "0.39"
pocket-ic = "6.0.0"
reqwest = { version = "^0.11.22", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "native-tls-vendored",
] }
serde = "^1.0"
slog = "^2.7.0"
tempfile = "3.12.0"
tokio = { version = "^1.36.0", features = ["rt-multi-thread"] }
url = "^2.4.1"
ic-http-utils = { git = "https://github.com/dfinity/ic", rev = "2dd2ccee9679aaf23cf57daaa703c46f7962c29f" }
ic-icp-index = { git = "https://github.com/dfinity/ic", rev = "2dd2ccee9679aaf23cf57daaa703c46f7962c29f" }
ic-icrc1-index-ng = { git = "https://github.com/dfinity/ic", rev = "2dd2ccee9679aaf23cf57daaa703c46f7962c29f" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic", rev = "2dd2ccee9679aaf23cf57daaa703c46f7962c29f" }
ic-sns-cli = { git = "https://github.com/dfinity/ic", rev = "2dd2ccee9679aaf23cf57daaa703c46f7962c29f" }
serde_json = "1.0.79"


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
