[workspace]
members = ["extensions/sns", "extensions/nns", "extensions-utils"]
resolver = "2"

[workspace.package]
authors = ["DFINITY Team"]
publish = false
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dfinity/dfx-extensions"

[workspace.dependencies]
dfx-core = "0.1.2"
dfx-extensions-utils.path = "./extensions-utils"

anyhow = "^1"
candid = "0.10"
clap = { version = "4.2.1", features = ["derive", "env"] }
flate2 = { version = "1.0.25", default-features = false, features = [
    "zlib-ng",
] }
fn-error-context = "0.2.1"
futures-util = "0.3.28"
ic-agent = "0.40"
ic-utils = "0.40"
pocket-ic = "10.0.0"
reqwest = { version = "^0.11.22", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "native-tls-vendored",
] }
serde = "^1.0"
sha2 = "^0.10.9"
slog = "^2.7.0"
tempfile = "3.12.0"
tokio = { version = "^1.36.0", features = ["rt-multi-thread"] }
url = "^2.4.1"
serde_json = "1.0.79"

# It is strongly recommended that NNS_SNS_REPLICA_REV be set to the same rev value used below.
ic-http-utils     = { git = "https://github.com/dfinity/ic", rev = "02571e8215fa3e77da791e693cc238b2de3beae9" }
ic-icp-index      = { git = "https://github.com/dfinity/ic", rev = "02571e8215fa3e77da791e693cc238b2de3beae9" }
ic-icrc1-index-ng = { git = "https://github.com/dfinity/ic", rev = "02571e8215fa3e77da791e693cc238b2de3beae9" }
ic-icrc1-ledger   = { git = "https://github.com/dfinity/ic", rev = "02571e8215fa3e77da791e693cc238b2de3beae9" }
ic-sns-cli        = { git = "https://github.com/dfinity/ic", rev = "02571e8215fa3e77da791e693cc238b2de3beae9" }


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
