[workspace]
members = ["extensions/sns", "extensions/nns", "extensions-utils"]
resolver = "2"

[workspace.package]
authors = ["DFINITY Team"]
publish = false
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dfinity/dfx-extensions"

[workspace.dependencies]
dfx-core = "0.3.0"
dfx-extensions-utils.path = "./extensions-utils"

anyhow = "^1"
candid = "0.10"
clap = { version = "4.2.1", features = ["derive", "env"] }
flate2 = { version = "1.0.25", default-features = false, features = [
    "zlib-ng",
] }
fn-error-context = "0.2.1"
futures-util = "0.3.28"
ic-agent = "0.45"
ic-utils = "0.45"
pocket-ic = "10.0.0"
reqwest = { version = "^0.11.22", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "native-tls-vendored",
] }
serde = { version = "^1.0.217", features = ["derive"] }
serde_json = { version = "1.0.121" }
sha2 = "^0.10.9"
slog = "^2.7.0"
tempfile = "3.12.0"
tokio = { version = "^1.36.0", features = ["rt-multi-thread"] }
url = "^2.4.1"

# It is strongly recommended that NNS_SNS_REPLICA_REV be set to the same rev value used below.
ic-http-utils     = { git = "https://github.com/dfinity/ic", rev = "007c473c9c7fc820c49eea5c823cdd4b9404119d" }
ic-icp-index      = { git = "https://github.com/dfinity/ic", rev = "007c473c9c7fc820c49eea5c823cdd4b9404119d" }
ic-icrc1-index-ng = { git = "https://github.com/dfinity/ic", rev = "007c473c9c7fc820c49eea5c823cdd4b9404119d" }
ic-icrc1-ledger   = { git = "https://github.com/dfinity/ic", rev = "007c473c9c7fc820c49eea5c823cdd4b9404119d" }
ic-sns-cli        = { git = "https://github.com/dfinity/ic", rev = "007c473c9c7fc820c49eea5c823cdd4b9404119d" }


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
