[package]
name = "sns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfx-core = { git = "https://github.com/dfinity/sdk", branch = "master" }
tokio = { version = "1.23.1", features = ["full"] }
clap = { version = "3.1.6", features = [ "derive", "env" ] }
anyhow = "1.0.56"
fn-error-context = "0.2.0"
tempfile = "3.3.0"
flate2 = { version = "1.0.11", default-features = false, features = ["zlib-ng"] }
reqwest = { version = "0.11.9", default-features = false, features = [ "blocking", "json", "rustls-tls", "native-tls-vendored" ] }
futures-util = "0.3.21"
slog = { version = "2.5.2", features = ["max_level_trace"] }
