[package]
name = "nns"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[build-dependencies]
dfx-extensions-utils.workspace = true

[dependencies]
dfx-core.workspace = true
dfx-extensions-utils.workspace = true
ic-agent.workspace = true
ic-utils.workspace = true
candid.workspace = true

anyhow.workspace = true
backoff = "0.4.0"
clap.workspace = true
crc32fast = "1.3.2"
fn-error-context.workspace = true
futures-util.workspace = true
hex = "0.4.3"
reqwest.workspace = true
rust_decimal = "1.29.1"
serde.workspace = true
sha2 = "0.10.6"
slog.workspace = true
tempfile.workspace = true
tokio.workspace = true


[package.metadata.release]
# list of replacements to be made after issuing `cargo release -p nns SEMVER`
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/dfinity/dfx-extensions/compare/{{tag_name}}...HEAD", exactly=1},
  {file="extension.json", search="\"version\": .*", replace="\"version\": \"{{version}}\",", exactly=1},
]

[package.metadata.dist]
include = ["extension.json", "sns-cli", "ic-admin", "ic-nns-init"]
