[package]
name = "nns"
version = "0.5.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[build-dependencies]
dfx-extensions-utils.workspace = true

[dependencies]
dfx-core.workspace = true
dfx-extensions-utils.workspace = true
ic-agent.workspace = true
ic-utils.workspace = true
candid.workspace = true
ic-sns-cli.workspace = true

anyhow.workspace = true
backoff = "0.4.0"
clap.workspace = true
crc32fast = "1.3.2"
fn-error-context.workspace = true
futures-util.workspace = true
ic-icp-index.workspace = true
ic-icrc1-index-ng.workspace = true
ic-icrc1-ledger.workspace = true
ic-http-utils.workspace = true
hex = "0.4.3"
pocket-ic.workspace = true
reqwest.workspace = true
rust_decimal = "1.29.1"
serde.workspace = true
sha2 = "0.10.6"
slog.workspace = true
tempfile.workspace = true
tokio.workspace = true


[package.metadata.release]
# list of replacements to be made after issuing `cargo release -p nns SEMVER`

[package.metadata.dist]
include = ["extension.json", "ic-admin", "ic-nns-init"]
