[package]
name = "sns"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[build-dependencies]
dfx-extensions-utils.workspace = true

[dependencies]
dfx-core.workspace = true
dfx-extensions-utils.workspace = true
ic-sns-cli.workspace = true

anyhow.workspace = true
clap.workspace = true
fn-error-context.workspace = true
slog.workspace = true
tokio.workspace = true
futures-util = "0.3.28"
candid.workspace = true

[package.metadata.release]
# Temp hack until https://github.com/axodotdev/cargo-dist/issues/187 is resovled.
publish = false
# list of replacements to be made after issuing `cargo release -p nns SEMVER`

[package.metadata.dist]
include = ["extension.json"]
